Closed Bug 755591 Opened 13 years ago Closed 13 years ago

[Azure] mPermitSubpixelAA is not properly initialized

Categories

(Core :: Graphics, defect)

x86_64
Windows 7
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla15

People

(Reporter: bas.schouten, Assigned: bas.schouten)

Details

Attachments

(1 file)

In bug 717393 the mPermitSubpixelAA option was added, however it is not initialized. This is bad since this could also affect Azure canvas.
Attachment #624259 - Flags: review?(jmuizelaar)
Attachment #624259 - Flags: review?(jmuizelaar) → review+
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla15
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: