Bug 755591: Properly initialize mPermitSubpixelAA. r=jrmuizel